Fixed cart background on topside edges that was spilling out

--- a/UserClient/src/app/components/cart/cart.component.scss
+++ b/UserClient/src/app/components/cart/cart.component.scss
@@ -32,7 +32,7 @@ body {
 .products {
   height: fit-content;
   background-color: $primary-100;
-  border-radius: 0 0 10px 10px;
+  border-radius: 10px;
   max-width: 1800px;
 }
 
